# react-native-morph-card

./: .eslintrc.js  .gitignore  CLAUDE.md  LICENSE  README.md  build-android.sh  package.json  react-native-morph-card.podspec  react-native.config.js  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: CMakeLists.txt
example/: app.json  index.js  metro.config.js  package.json  react-native.config.js
example/android/: build.gradle  gradle.properties  settings.gradle
example/ios/: Podfile
example/src/: App.tsx  BlueDetailScreen.tsx  CatDetailScreen.tsx  ExampleListScreen.tsx  HomeScreen.tsx
example/src/assets/: index.ts
example/src/examples/appstore/: AppStoreScreen.tsx  (+1 more)
ios/: RNCMorphCardModule.h  RNCMorphCardModule.mm  RNCMorphCardSource.h  RNCMorphCardSource.m  RNCMorphCardSourceManager.h  RNCMorphCardSourceManager.m  RNCMorphCardTarget.h  RNCMorphCardTarget.m  RNCMorphCardTargetManager.h  RNCMorphCardTargetManager.m  RNCMorphCardViewRegistry.h  RNCMorphCardViewRegistry.m
ios/Fabric/: RNCMorphCardAnimationStrategy.h  RNCMorphCardPushStrategy.h  RNCMorphCardPushStrategy.mm  RNCMorphCardSourceComponentView.h  RNCMorphCardSourceComponentView.mm  RNCMorphCardTargetComponentView.h  RNCMorphCardTargetComponentView.mm  RNCMorphCardTransparentModalStrategy.h  RNCMorphCardTransparentModalStrategy.mm
src/: MorphCard.types.ts  MorphCardSource.tsx  MorphCardTarget.tsx  MorphChildrenRegistry.ts  index.tsx  useMorphTarget.ts
src/specs/: NativeMorphCardModule.ts  NativeMorphCardSource.ts  NativeMorphCardTarget.ts
(+31 files in other folders)
